# GameJamGameEngine

./: .gitignore  Cargo.toml  README.md
src/: engine.rs  main.rs  mainex.rs
src/engine/: assets.rs  camera.rs  entities.rs  entity_manager.rs  gamespace.rs  gl_bindings.rs  mod.rs  renderer.rs  sprite_sdl.rs
src/engine/assets/: asset_finder.rs  sprite.rs
src/engine/camera/: static_camera.rs
src/engine/entity_manager/: entity.rs  entity_spawner.rs
src/engine/gamespace/: distance.rs  gamerect.rs  position.rs  size.rs
src/logger/: logger.rs  mod.rs
