[package]
name = "game_jam_game_engine"
version = "1.0.0"
authors = ["Tazwell <tazwell@pdx.edu>"]

description = "Simple game engine for developing games in rust during game jams."

[dependencies]
gl = "0.14.0"
sdl2 = {version = "0.37",features = ["image"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
